<resources>
    <string name="app_name">政企录播</string>

    <string name="toast_lubo_login_failed">录播连接失败</string>
    <string name="toast_lubo_login_success">录播连接成功</string>
    <string name="toast_input_correct_lubo_info">请输入正确录播信息</string>
    <string name="toast_input_account_psw">请输入录播账号密码</string>
    <string name="toast_platform_link_failed">平台连接失败</string>
    <string name="toast_platform_link_success">平台连接成功</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="tips_lubo_need_wake_up">录播设备已休眠，是否唤醒？</string>
    <string name="wakeup_success">唤醒成功</string>
    <string name="wakeup_failed">唤醒失败</string>

    <string name="link_lubo">连接录播</string>
    <string name="link_platform">连接平台</string>
    <string name="lubo_ip">设备IP</string>
    <string name="lubo_port">设备端口</string>
    <string name="lubo_account">设备账号</string>
    <string name="lubo_psw">设备密码</string>
    <string name="link">连接</string>
    <string name="platform_addr">平台地址</string>
    <string name="please_input">请输入</string>
    <string name="input_lubo_ip">请输入设备IP</string>
    <string name="input_lubo_port">请输入设备端口</string>
    <string name="input_lubo_username">请输入设备账号</string>
    <string name="input_lubo_psw">请输入设备密码</string>
    <string name="input_platform_addr">请输入设备平台地址</string>


    <string name="create_meeting">创建会议</string>
    <string name="recent_call">最近呼叫</string>
    <string name="contract_book">通讯录</string>
    <string name="contract_group">通讯群组</string>
    <string name="selected_contract">已选用户：</string>
    <string name="call">呼叫</string>


    <string name="video_resource_title">视频资源</string>
    <string name="manage_resource_title">管理资源</string>
    <string name="resource_list">资源列表</string>
    <string name="transmission_list">传输列表</string>
    <string name="delete_all_record">清除全部记录</string>
    <string name="delete">删除</string>
    <string name="download">下载</string>
    <string name="select_all">全选</string>
    <string name="cancel_select_all">取消全选</string>
    <string name="select_disk">选择U盘</string>
    <string name="no_disk_warning">未检测到U盘，请插入！</string>
    <string name="tip_remain_only_one_udisk">请拔出留下唯一一个U盘</string>
    <string name="tip_find_no_udisk">检测不到U盘设备</string>
    <string name="sort_by_size">按文件大小</string>
    <string name="sort_by_time">按录制时间</string>
    <string name="batch_manage">批量管理</string>
    <string name="tip_download_exist">该视频已在下载队列</string>
    <string name="tip_upload_exist">该视频已在上传队列</string>
    <string name="tip_upload_done">该视频已上传</string>
    <string name="tip_upload_uploading">该视频正在上传中</string>
    <string name="tip_upload_success">已上传完成</string>
    <string name="tip_upload_failed">上传失败</string>
    <string name="tip_delete_video">您确定要删除该视频吗？</string>
    <string name="tip_delete_videos">您确定要删除已选的视频吗？</string>
    <string name="tip_select_delete_videos">请勾选需要删除的视频</string>
    <string name="tip_max_delete_videos_count">单次最大可删除50个文件</string>

    <string name="tip">提示</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>


    <string name="select_contract">选择联系人</string>
    <string name="input_key_search">输入关键字搜索</string>
    <string name="complete_format">完成(%s)</string>

    <string name="create_group">创建群组</string>

    <string name="group_name">群组名</string>
    <string name="input_groupname">请输入群组名</string>
    <string name="create_success">创建成功</string>
    <string name="create_failed">创建失败</string>

    <string name="total_format">(%d人)</string>
    
    <string name="meeting_theme">会议主题</string>
    <string name="meeting_user_nickname">入会称呼</string>
    <string name="waiting_room">等候室</string>
    <string name="input_meeting_theme">请输入会议主题(必填)</string>
    <string name="input_meeting_user_nickname">请输入入会称呼(必填)</string>

    <string name="toast_create_meeting_max_count">当前最大支持选择人数为：9</string>
    <string name="start_record">开始录制</string>
    <string name="stop_record">停止录制</string>
    <string name="start_pause">暂停录制</string>
    <string name="resume_pause">恢复录制</string>
    <string name="plugin_computer">接入电脑</string>
    <string name="start_live">开始直播</string>
    <string name="stop_live">停止直播</string>
    <string name="tract_mode">导播模式</string>
    <string name="key_setting">按键设置</string>
    <string name="volume">音量</string>

    <string name="auto_track">全自动</string>
    <string name="mid_track">半自动</string>
    <string name="hand_track">手动</string>
    <string name="record_info">录制信息</string>
    <string name="theme_mao">主题：</string>
    <string name="teacher_format">主讲人：%s</string>
    <string name="has_record_foramt">已录制：%s</string>
    <string name="record_param">录制参数：%s</string>
    <string name="file_space">文件空间：%s</string>
    <string name="cpu_temperature">CPU温度：%s</string>

    <string name="modify_theme_failed">修改失败</string>

    <string name="video_window">视频窗口</string>
    <string name="video_layout">视频布局</string>
    <string name="preset_location">预置位</string>
    <string name="custom_layout_format">自定义布局%d</string>
    <string name="preset_position_format">预置位%d</string>
    <string name="toast_max_button_add">当前最大添加按钮为9个</string>
    <string name="preset_video_format">%s预置位%d</string>
    <string name="reset">重置</string>

    <string name="computer_scene">电脑画面</string>
    <string name="live_scene">现场画面</string>

    <string name="power_setting">录播设备电源选项</string>
    <string name="power_setting_msg">（注：选择"关机"后，启动录播须手动开启录播设备电源）</string>
    <string name="turnoff_machine">关机</string>
    <string name="sleep_machine">休眠</string>
    <string name="reload_machine">重启</string>
    <string name="success">成功</string>
    <string name="failed">失败</string>
    <string name="listener_in_waiting">等候室等候中......</string>
    <string name="toast_cannot_go_create_meeting">正在录制或直播，无法进行会议</string>
    <string name="tip_cancel_record_or_live">确认停止当前录制或直播？</string>


    <string name="machine_info">设备信息</string>
    <string name="software_upgrade">软件升级</string>
    <string name="click_upgrade">点击升级</string>
    <string name="upgrade_tip">（升级过程中请勿断电，升级完成后须重启应用）</string>
    <string name="info_format_1">设备型号：%s</string>
    <string name="info_format_2">注册状态：%s</string>
    <string name="info_format_3">设备版本：%s</string>
    <string name="info_format_4">互动账号：%s</string>
    <string name="info_format_5">录播IP：%s</string>
    <string name="info_format_6">互动昵称：%s</string>
    <string name="upgrade_message">检测到软件新版本,是否确定更新？</string>
    <string name="no_upgrade_message">暂无新版本</string>
    <string name="logout">退出登录</string>
    <string name="confirm_logout">是否退出登录？</string>
    <string name="handup_speak">举手发言</string>
    <string name="exit_meeting">退出会议</string>
    <string name="over_meeting">解散会议</string>
    <string name="tip_confirm_exit_meeting">确定退出当前会议？</string>
    <string name="source_select">信号源选择</string>
    <string name="meeting_num">会议号：</string>
    <string name="meeting_psw">会议密码：</string>
    <string name="meeting_begin_time">开始时间：</string>
    <string name="meeting_master_name">发起方：</string>
    
    <string name="select_scene_signal">选择画面信号</string>
    <string name="mic">麦克风</string>
    <string name="loudspeaker">扬声器</string>
    <string name="close">关闭</string>
    <string name="scene_layout">画面布局</string>
    <string name="member_manage">成员管理</string>

    <string name="next_step">下一步</string>
    <string name="last_step">上一步</string>
    <string name="signal_format">信号%d:</string>
    
    <string name="patrol_interval">轮播间隔时长：</string>
    <string name="unit_second">(单位：秒)</string>
    <string name="select_what_patrol">选择参与轮播：</string>
    <string name="join_meeting">加入会议</string>
    <string name="hint_meeting_num">请输入会议号</string>
    <string name="hint_meeting_psw">请输入会议密码</string>
    <string name="hint_meeting_nickname">请输入入会称呼</string>
    <string name="join">加入</string>
    <string name="all_remove">全部移出</string>
    <string name="lock_meeting">锁定会议</string>
    <string name="unlock_meeting">解除锁定</string>
    <string name="all_silent">全体静音</string>
    <string name="cancel_all_silent">解除静音</string>
    <string name="all_accept">全部准入</string>
    <string name="has_enter">已入会</string>
    <string name="waitingroom">等候室</string>
    <string name="accept_enter">准入</string>
    <string name="no_signal">无信号</string>
    <string name="exit_speak_mode">退出发言模式</string>
    <string name="join_failed">加入失败</string>
    <string name="toast_net_lubo_error">连接录播主机出现异常</string>
    <string name="toast_net_platform_error">连接用户系统出现异常</string>
    <string name="set_meeting_layout_failed">切换布局失败</string>

    <string name="who_launch_meeting">发起的会议</string>

    <string name="title_record_upload">已录制视频文件归档选择</string>
    <string name="record_upload_msg">（归档至平台：归档成功后请前往平台个人空间查看）</string>
    <string name="upload_to_platform">归档至平台</string>
    <string name="format_apply_speak">%s请求发言</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>
    <string name="app_jihuo">应用激活</string>
    <string name="jihuo_code">激活码</string>
    <string name="get_code">获取激活码</string>
    <string name="hint_input_code">请输入激活码</string>
    <string name="get_no_code">获取不到激活码</string>
    <string name="validate_success">激活成功</string>
    <string name="validate_failed">激活失败</string>
    <string name="format_device_code">设备码：%s</string>
    <string name="reject">拒绝</string>
    <string name="accept_call">接听</string>
    <string name="create_meeting_failed">创建会议失败</string>
    <string name="create_meeting_success">创建会议成功</string>

    <string name="set_success">设置成功</string>
    <string name="set_failed">设置失败</string>
    <string name="request_speak_success">申请发言成功</string>
    <string name="request_speak_failed">申请发言失败</string>
    <string name="upload_set">视频已提交归档</string>
    <string name="toast_other_login_exception">异地登录，账号登出</string>
    <string name="toast_no_need_patrol">当前在线用户不足，无法使用轮播</string>

    <string name="toast_full_track_cannot_use">全自动导播模式下,无法使用该按钮</string>
    <string name="toast_mid_track_cannot_use">手动导播模式下,才能使用该按钮</string>
    <string name="toast_lubo_key_invalid">当前连接录播主机用户失效，请重新连接</string>

</resources>