<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="640dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="47dp"
        android:text="@string/theme_mao"
        android:textColor="@color/color_333333"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_theme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="29dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="564556456465456456465456456465456456465456456465456456465456456465456456465464654"
        android:textColor="@color/color_333333"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_meeting_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/meeting_num"
        android:textColor="@color/color_333333"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/tv_theme" />

    <TextView
        android:id="@+id/tv_meeting_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meeting_psw"
        android:layout_marginTop="23dp"
        android:textColor="@color/color_333333"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/tv_meeting_num" />


    <TextView
        android:id="@+id/tv_meeting_begin_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meeting_begin_time"
        android:layout_marginTop="23dp"
        android:textColor="@color/color_333333"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/tv_meeting_psw" />

    <TextView
        android:id="@+id/tv_meeting_master_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/meeting_master_name"
        android:textColor="@color/color_333333"
        android:layout_marginBottom="37dp"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/tv_meeting_begin_time"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>