<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="12dp"
            android:visibility="@{luboViewModel.canBackShow?View.VISIBLE:View.GONE}"
            android:background="@drawable/bg_text_button_1"
            android:src="@mipmap/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_tab_lubo"
            style="@style/TextButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:background="@drawable/bg_text_button_1"

            android:selected="@{luboViewModel.tabIndex==0}"
            android:text="@string/link_lubo"
            android:textColor="@drawable/selector_text_color_1"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_tab_plat"
            style="@style/TextButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selected="@{luboViewModel.tabIndex==1}"
            android:text="@string/link_platform"
            android:background="@drawable/bg_text_button_1"
            android:textColor="@drawable/selector_text_color_1"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_tab_lubo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/tv_tab_lubo" />


        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/color_E2E2E2"
            app:layout_constraintBottom_toBottomOf="@+id/tv_tab_lubo"
            app:layout_constraintEnd_toStartOf="@+id/tv_tab_plat"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_tab_lubo"
            app:layout_constraintTop_toTopOf="@+id/tv_tab_lubo" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lubo_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:visibility="@{luboViewModel.tabIndex==0?View.VISIBLE:View.GONE}"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tab_lubo">


            <TextView
                android:id="@+id/btn_link_lubo"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginTop="48dp"
                android:padding="0dp"
                android:background="@drawable/bg_button_1"
                android:text="@string/link"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/editText"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/editText4" />

            <EditText
                android:id="@+id/editText"
                style="@style/EditTextStyle"
                android:layout_width="364dp"
                android:layout_height="52dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/bg_edittext_1"
                android:hint="@string/input_lubo_port"
                android:text="@={luboViewModel.port}"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />

            <EditText

                android:id="@+id/editText3"
                style="@style/EditTextStyle"
                android:layout_width="364dp"
                android:layout_height="52dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/bg_edittext_1"
                android:hint="@string/input_lubo_username"
                android:text="@={luboViewModel.username}"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <EditText
                android:id="@+id/editText4"
                style="@style/EditTextStyle"
                android:layout_width="364dp"
                android:layout_height="52dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/bg_edittext_1"
                android:hint="@string/input_lubo_psw"
                android:maxLines="1"
                android:text="@={luboViewModel.password}"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintTop_toBottomOf="@+id/editText3" />


            <EditText
                android:id="@+id/editText2"
                style="@style/EditTextStyle"
                android:layout_width="364dp"
                android:layout_height="52dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_edittext_1"
                android:hint="@string/input_lubo_ip"
                android:text="@={luboViewModel.ip}"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lubo_ip"
                android:textColor="@color/color_222222"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/editText2"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/editText2" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lubo_psw"
                android:textColor="@color/color_222222"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/editText4"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/editText4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/lubo_port"
                android:textColor="@color/color_222222"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/editText"
                app:layout_constraintEnd_toStartOf="@+id/editText"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editText" />


            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lubo_account"
                android:textColor="@color/color_222222"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/editText3"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/editText3" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/platform_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:visibility="@{luboViewModel.tabIndex==1?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tab_lubo">


            <TextView
                android:id="@+id/btn_link_platform"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:padding="0dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/bg_button_1"
                android:text="@string/link"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/editText5"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/editText5" />

            <EditText
                android:id="@+id/editText5"
                style="@style/EditTextStyle"
                android:layout_width="364dp"
                android:layout_height="52dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_edittext_1"
                android:hint="@string/input_platform_addr"
                android:text="@={luboViewModel.platformAddr}"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/platform_addr"
                android:textColor="@color/color_222222"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/editText5"
                app:layout_constraintEnd_toStartOf="@+id/editText5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editText5" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <import type="android.view.View" />

        <variable
            name="luboViewModel"
            type="cn.com.ava.zqproject.ui.setting.LuBoSettingViewModel" />
    </data>


</layout>
