<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="590dp"
    android:background="@drawable/bg_dialog"
    android:layout_height="wrap_content">


    <EditText
        android:id="@+id/et_meeting_theme"
        android:layout_width="426dp"
        android:layout_height="52dp"
        android:paddingLeft="22dp"
        android:paddingRight="22dp"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        android:imeOptions="actionDone"
        android:hint="@string/input_groupname"
        android:layout_marginTop="33dp"
        android:background="@drawable/bg_edittext_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:textColor="@color/color_222222"
        android:textSize="19sp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_meeting_theme"
        app:layout_constraintEnd_toStartOf="@+id/et_meeting_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_meeting_theme" />

    <TextView
        android:id="@+id/textView13"
        style="@style/DialogTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/create_group"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/color_E2E2E2"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/color_E2E2E2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_sure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel" />


    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:background="@drawable/bg_text_button_1"
        android:gravity="center"
        android:text="@string/cancel"
        android:layout_marginTop="52dp"
        android:textColor="@color/color_999999"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_sure"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_meeting_theme"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/btn_sure"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:text="@string/sure"
        android:background="@drawable/bg_text_button_1"

        android:gravity="center"
        android:textColor="@color/color_318EF8"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel" />


</androidx.constraintlayout.widget.ConstraintLayout>